--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
 
   <title>Submarin</title>
-  <!-- <meta property="og:title" content="">
-  <meta name="description" content="">
-  <meta property="og:description" content="">
-  <meta property="og:image" content="./">
-  <meta property="og:locale" content="ja_JP">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://">
-  <link rel="canonical" href="https://">
-  <meta name="twitter:card" content="summary">
-  <link rel="icon" href="./favicon.ico"> -->
-  <meta name="theme-color" content="#ffffff">
+  <meta name="description" content="不特定多数とのコミュニケーションに特化したリアルタイムチャットアプリケーション。">
+  <link rel="icon" href="./favicon.png">
+  <meta name="theme-color" content="#41adef">
 
   <script type="module" src="./ts/main.tsx"></script>
 </head>
